<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#2E3551"
    android:id="@+id/Bookdetail"
    tools:context=".Bookdetail">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="374dp"
                android:layout_height="177dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="#ffffff"
                app:cardCornerRadius="18dp"
                app:cardElevation="20dp">

                <ImageView
                    android:id="@id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="+ UPLOAD IMAGE"
                    android:contentDescription="@string/upload_book_photo" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/camera"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:layout_margin="16dp"
                    android:background="#2E3551"
                    android:contentDescription="@string/desc"
                    android:src="@drawable/ic_photo_camera_24dp"
                    app:fabSize="auto" />
            </androidx.cardview.widget.CardView>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:text="@string/bookdetails"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/Edt1"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/book_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/Edt2"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/publisher_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/Edt3"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:hint="@string/writer_name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="#FFFFFF"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp">

                <EditText
                    android:id="@+id/Edt4"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:hint="@string/price"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#ffffff"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/Edt5"
                    android:layout_width="150dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="200dp"
                    android:layout_marginLeft="200dp"
                    android:hint="pages"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#ffffff"
                    android:textSize="20sp" />

            </RelativeLayout>

            <EditText
                android:id="@+id/Edt6"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginLeft="30dp"
                android:hint="Contact no. "
                android:importantForAutofill="no"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHint="#ffffff"
                android:textSize="20sp" />


<!--            <ProgressBar-->
<!--                android:id="@+id/progressBar_cyclic"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:minHeight="50dp"-->
<!--                android:minWidth="50dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_centerVertical="true"-->
<!--                android:layout_centerHorizontal="true" />-->

            <Button
                android:id="@+id/button1"
                android:layout_width="330dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/custom_button"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/submit"
                android:textColor="#ffffff"
                android:textSize="20sp" />

        </LinearLayout>


</RelativeLayout>
