<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E3551"
    tools:context=".login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="12dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/Edt1"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/email"
                android:importantForAutofill="no"
                android:inputType="textCapCharacters"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/button1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />


            <EditText
                android:id="@+id/Edt2"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="25sp"
                app:layout_constraintBottom_toTopOf="@+id/Edt1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.938" />

            <Button
                android:id="@+id/button1"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_button"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="25sp"
                 />

            <Button
                android:id="@+id/button2"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:background="@drawable/custom_button"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="25sp"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>