<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2E3551"
    tools:context=".register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <!-- <EditText
         android:id="@+id/Edt1"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:hint="@string/name"
         android:textColorHint="#ffffff"
         android:textColor="#ffffff"
         android:textSize="25sp"
         android:layout_marginTop="40dp"
         android:layout_marginLeft="30dp"
         android:inputType="text"
         android:layout_marginStart="30dp"
         android:autofillHints="@string/name" />-->


            <!-- <EditText
         android:id="@+id/Edt3"
         android:layout_width="350dp"
         android:layout_height="60dp"
         android:hint="@string/phone_no"
         android:textColorHint="#ffffff"
         android:textColor="#ffffff"
         android:textSize="25sp"
         android:layout_marginTop="20dp"
         android:layout_marginLeft="30dp"
         android:inputType="number"
         android:layout_marginStart="30dp"
         android:autofillHints="@string/phone_no" />-->


            <EditText
                android:id="@+id/Edt2"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"

                android:layout_marginTop="20dp"
                android:autofillHints="@string/email"
                android:hint="@string/email"
                android:inputType="textCapCharacters"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Edt4"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/password"
                android:hint="@string/password"
                android:inputType="textPhonetic"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/Edt5"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/confirm_password"
                android:hint="@string/confirm_password"
                android:inputType="textPhonetic"
                android:textColor="#000000"
                android:textColorHint="#808080"
                android:textSize="20sp" />


            <Button
                android:id="@+id/button"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="80dp"
                android:background="@drawable/custom_button"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/register"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>