<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#2E3551"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pdfdetail">

    <!--    <RadioGroup-->
<!--        android:id="@+id/radiog"-->
<!--        android:layout_width="match_parent"-->
<!--        android:elevation="2dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:orientation="horizontal">-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="51dp"-->
<!--            android:layout_marginLeft="20dp"-->
<!--            android:text="BSc IT"-->
<!--            android:textSize="20sp"-->
<!--            android:textColor="#ffffff"/>-->

<!--        <RadioButton-->
<!--            android:id="@+id/radioButton1"-->
<!--            android:layout_marginLeft="10dp"-->
<!--            android:layout_width="208dp"-->
<!--            android:layout_height="84dp"-->
<!--            android:text="Computer Science"-->
<!--            android:textSize="20sp"-->
<!--            android:textColor="#ffffff"-->
<!--            android:layout_marginStart="10dp" />-->

<!--    </RadioGroup>-->

    <!--    <Spinner-->
<!--        android:id="@+id/spinner1"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="48dp"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:dropDownWidth="70dp"-->
<!--        tools:listheader="select semester"-->
<!--        />-->

    <TextView
        android:id="@+id/text"
        android:layout_width="162dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="36dp"
        android:text="@string/pdf_detail_s"
        android:textColor="#B6BABA"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:layout_marginTop="19dp"
        android:src="@drawable/ic_baseline_picture_as_pdf_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text"
        android:contentDescription="pdf logo">

    </ImageView>

        <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:dropDownWidth="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:ignore="NotSibling"
        tools:listheader="select Year" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        app:layout_constraintVertical_bias="0.0">


        <EditText
            android:id="@+id/edit2"
            android:layout_width="313dp"
            android:layout_height="55dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:autofillHints=""
            android:gravity="center"
            android:hint="@string/select_pdf_from_storage"
            android:inputType="text"
            android:textColor="#ffffff"
            android:textColorHint="#ffffff"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/image2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="30sp"
            android:layout_marginTop="20sp"
            android:layout_marginEnd="20sp"
            android:layout_marginBottom="20sp"
            android:contentDescription="attcah file"
            android:src="@drawable/ic_baseline_attach_file_24" />
    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="144dp"
        android:background="@drawable/custom_button"
        android:src="@drawable/custom_button"
        android:text="@string/upload_pdf"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>